# OpenWalnut

./: .gitignore  .gitlab-ci.yml  .hg_notify.hgml  .hgchurn  .hgignore  AUTHORS  CONTRIBUTORS  README  README.md  README_STUBER_SH  VERSION
src/: BCognize.cpp  CMakeLists.txt  OpenWalnut.cpp  README  README.Windows  bCognize.cpp
src/common/: CMakeLists.txt  WAssert.cpp  WAssert.h  WBoundingBox.cpp  WBoundingBox.h  WColor.cpp  WColor.h  WColor.hpp  WCondition.cpp  WCondition.h  WConditionOneShot.cpp  WConditionOneShot.h  WConditionSet.cpp  WConditionSet.h  WDefines.cpp  WDendrogram.h  WException.cpp  WException.h  WExportCommon.h  WExport_CommonDLL.h  WFlag.cpp  WFlag.h  WFlag.hpp  WFlagForwarder.cpp  WFlagForwarder.h  WHierarchicalTree.cpp  WHierarchicalTree.h  WHierarchicalTreeFibers.cpp  WHierarchicalTreeFibers.h  WHierarchicalTreeVoxels.cpp  WHierarchicalTreeVoxels.h  WHistogram.cpp  WHistogram.h  WHistogramBasic.h  WIOTools.cpp  WIOTools.h  WItemSelection.cpp  WItemSelection.h  WItemSelectionItem.cpp  WItemSelectionItem.h  (+90 more)
src/core/: CMakeLists.txt
src/dataHandler/: CMakeLists.txt  WCreateColorArraysThread.cpp  WCreateColorArraysThread.h  WDataHandler.cpp  WDataHandler.h  WDataHandlerEnums.cpp  WDataHandlerEnums.h  WDataSet.cpp  WDataSet.h  WDataSetDTI.cpp  WDataSetDTI.h  WDataSetFiberVector.cpp  WDataSetFiberVector.h  WDataSetFibers.cpp  WDataSetFibers.h  WDataSetFibers2.cpp  WDataSetFibers2.h  WDataSetGP.cpp  WDataSetGP.h  WDataSetMultiple.cpp  WDataSetMultiple.h  WDataSetRawHARDI.cpp  WDataSetRawHARDI.h  WDataSetScalar.cpp  WDataSetScalar.h  WDataSetSingle.cpp  WDataSetSingle.h  WDataSetSphericalHarmonics.cpp  WDataSetSphericalHarmonics.h  WDataSetTimeDependent.cpp  WDataSetTimeDependent.h  WDataSetTimeSeries.cpp  WDataSetTimeSeries.h  WDataSetVector.cpp  WDataSetVector.h  WDataTexture3D.cpp  WDataTexture3D.h  WDataTexture3D_2.cpp  WDataTexture3D_2.h  WEEG.cpp  (+54 more)
src/ext/: CMakeLists.txt  README
src/graphicsEngine/: BGLScenePainter.cpp  BGLScenePainter.h  CMakeLists.txt  WCLRenderNode.cpp  WCLRenderNode.h  WEvent.cpp  WEvent.h  WExportWGE.h  WExport_GEDLL.h  WFiberDrawable.cpp  WFiberDrawable.h  WGE2DManipulator.cpp  WGE2DManipulator.h  WGEAnimationManipulator.cpp  WGEAnimationManipulator.h  WGEBorderLayout.cpp  WGEBorderLayout.h  WGECamera.cpp  WGECamera.h  WGEColormapping.cpp  WGEColormapping.h  WGEGeodeUtils.cpp  WGEGeodeUtils.h  WGEGeometryUtils.cpp  WGEGeometryUtils.h  WGEGraphicsWindow.cpp  WGEGraphicsWindow.h  WGEGroupNode.cpp  WGEGroupNode.h  WGELabel.cpp  WGELabel.h  WGELayoutableItem.h  WGEManagedGroupNode.cpp  WGEManagedGroupNode.h  WGEOffscreen.cpp  WGEOffscreen.h  WGEOffscreenFinalPass.cpp  WGEOffscreenFinalPass.h  WGEOffscreenRenderNode.cpp  WGEOffscreenRenderNode.h  (+75 more)
src/gui/: BGUI.cpp  BGUI.h  CMakeLists.txt  WCustomWidget.cpp  WCustomWidget.h  WGUI.cpp  WGUI.h
src/kernel/: CMakeLists.txt  WBatchLoader.cpp  WBatchLoader.h  WCrosshair.cpp  WCrosshair.h  WExportKernel.h  WExport_KernelDLL.h  WFiberSelector.cpp  WFiberSelector.h  WKdTree.cpp  WKdTree.h  WKernel.cpp  WKernel.h  WModule.cpp  WModule.h  WModuleCombiner.cpp  WModuleCombiner.h  WModuleCombinerTypes.cpp  WModuleCombinerTypes.h  WModuleConnector.cpp  WModuleConnector.h  WModuleConnectorSignals.cpp  WModuleConnectorSignals.h  WModuleContainer.cpp  WModuleContainer.h  WModuleFactory.cpp  WModuleFactory.h  WModuleForwardConnector.cpp  WModuleForwardConnector.h  WModuleInputConnector.cpp  WModuleInputConnector.h  WModuleInputData.h  WModuleInputData.hpp  WModuleInputForwardConnector.cpp  WModuleInputForwardConnector.h  WModuleInputForwardData.cpp  WModuleInputForwardData.h  WModuleLoader.cpp  WModuleLoader.h  WModuleOutputConnector.cpp  (+35 more)
src/math/: CMakeLists.txt  WFiber.cpp  WFiber.h  WLine.cpp  WLine.h  WLinearAlgebraFunctions.cpp  WLinearAlgebraFunctions.h  WMath.cpp  WMath.h  WMatrix.h  WMatrix.hpp  WPosition.cpp  WPosition.h  WValue.h  WValue.hpp  WVector3D.cpp  WVector3D.h
src/modules/: CMakeLists.txt  emptyIcon.xpm  modules-base.toolbox  modules-dependencies.cmake  modules-eeg.toolbox  modules-imageprocessing.toolbox  modules-io.toolbox  modules-others.toolbox
src/qt4gui/: CMakeLists.txt  OpenWalnut.cpp  WApplication.cpp  WApplication.h  WGuiConsts.h  WIconManager.cpp  WIconManager.h  WMainWindow.cpp  WMainWindow.h  WQt4Gui.cpp  WQt4Gui.h  WQtCombinerToolbar.h  WQtCustomDockWidget.cpp  WQtCustomDockWidget.h  WQtGLDockWidget.cpp  WQtGLDockWidget.h  WQtGLScreenCapture.cpp  WQtGLScreenCapture.h  WQtGLWidget.cpp  WQtGLWidget.h  WQtMessageDialog.cpp  WQtMessageDock.cpp  WQtMessageDock.h  WQtMessagePopup.cpp  WQtModuleConfig.cpp  WQtModuleConfig.h  WQtNavGLWidget.cpp  WQtToolBarBase.cpp  WQtToolBarBase.h
src/qt5gui/: CMakeLists.txt  OpenWalnut.cpp  WApplication.cpp  WApplication.h  WIconManager.cpp  WMainWindow.cpp  WMainWindow.h  WNoIconDefault.xpm  WQt4Gui.cpp  WQt4Gui.h  WQtCombinerActionList.h  WQtCombinerToolbar.cpp  WQtCombinerToolbar.h  WQtGLDockWidget.cpp  WQtGLDockWidget.h  WQtGLScreenCapture.cpp  WQtGLScreenCapture.h  WQtGLWidget.cpp  WQtGLWidget.h  WQtGui.cpp  WQtGui.h  WQtMessageDialog.cpp  WQtMessageDock.cpp  WQtMessagePopup.cpp  WQtMessagePopup.h  WQtModuleConfig.cpp  WQtModuleConfig.h  WQtNavGLWidget.cpp  WQtNavGLWidget.h  WQtToolBar.cpp  WQtToolBarBase.cpp  WSettingAction.cpp  WSettingAction.h  WSettingMenu.cpp  WSettingMenu.h
src/qtgui/: CMakeLists.txt  OpenWalnut.cpp  WApplication.cpp  WApplication.h  WIconManager.cpp  WIconManager.h  WMainWindow.cpp  WMainWindow.h  WQtCombinerToolbar.cpp  WQtCombinerToolbar.h  WQtGLDockWidget.cpp  WQtGLDockWidget.h  WQtGLScreenCapture.cpp  WQtGLScreenCapture.h  WQtGLWidget.cpp  WQtGLWidget.h  WQtGui.cpp  WQtGui.h  WQtMessageDialog.h  WQtMessageDock.cpp  WQtMessageDock.h  WQtMessagePopup.cpp  WQtModuleConfig.cpp  WQtNavGLWidget.cpp  WQtNavGLWidget.h  WQtToolBar.h  WQtToolBarBase.cpp  WQtToolBarBase.h  WSettingAction.h
src/scriptGui/: CMakeLists.txt  OpenWalnutScript.cpp
src/scriptUI/: CMakeLists.txt  OpenWalnutScript.cpp  WScriptUI.cpp  WScriptUI.h
src/scriptgui/: CMakeLists.txt  OpenWalnutScript.cpp
src/scripting/: CMakeLists.txt  (+2 more)
(+3496 files in other folders)
